[package]
name = "polars-mongo"
version = "0.3.0"
edition = "2021"
authors = ["universalmind303 <cory.grinstead@gmail.com>"]
license = "MIT"
keywords = ["dataframe", "query-engine", "arrow", "polars", "database"]
description = "Connector to read polars dataframes from mongodb collections"
repository = "https://github.com/universalmind303/polars-mongo/"

[lib]
crate-type = ["lib"]

[dependencies]
num = "0.4"
polars-time = "0.35"
polars-core = "0.35"
polars-plan = "0.35"
serde = {version = "1", features = ["derive", "rc"], optional = true}

[dependencies.mongodb]
version = "2.7"
default-features = false
features = ["sync"]

[dependencies.polars]
version = "0.35"
features = ["lazy", "dtype-full"]

[profile.release]
lto = "fat"

[workspace]
members = [
  "examples/read_collection"
]
